# openferric

./: .codecov.yml  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  eslint.config.mjs  netlify.toml  package-lock.json  package.json  ruff.toml  tsconfig.json
.agentskills/openferric-dsl/: SKILL.md
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/workflows/: ci.yml  coverage.yml  docs.yml  pages.yml  release.yml
.netlify/: netlify.toml
benches/: aad_bench.rs  dsl_bench.rs  fft_bench.rs  interpolation_bench.rs  mc_bench.rs  parallel_bench.rs  pricing_bench.rs  simd_bench.rs
docs/: COVERAGE.md  EXAMPLES.md  HARDWARE_ACCELERATION_REPORT.md  REFERENCES.md  dsl.md
docs/blog/: full-derivatives-pricing-in-700kb-of-wasm.md
docs/schemas/: README.md  market_snapshot.schema.json  pricing_audit.schema.json  trade.schema.json
examples/: boros_funding_swap.py  boros_funding_swap.rs  calibrate_deribit.rs  european_pricing.rs  levy_models.rs  xva_demo.rs
examples/dsl/: 01_zero_coupon.of  02_fixed_coupon_note.dsl  03_forward.of  04_reverse_convertible.of  05_barrier_reverse_convertible.dsl  06_autocallable_worst_of.of  07_step_down_autocallable.dsl  08_phoenix_memory_coupon.of  09_athena_autocallable.of  10_snowball_note.dsl  11_digital_coupon_note.of  12_twin_win.of  13_capital_protected_note.of  14_bonus_certificate.of  15_cliquet.dsl  15_cliquet.of  16_accumulator_tarf.of  17_range_accrual.of  18_shark_fin.of  19_outperformance_certificate.dsl  20_wedding_cake.of  21_best_of_call.dsl  22_worst_of_put.of  23_express_certificate.of  24_lookback_coupon.of  25_callable_note.of  26_asian_payout.of  27_airbag_certificate.dsl  28_double_barrier_ki_ko.of  29_dispersion_note.of  30_napoleon.dsl
excel-addin/: .gitignore  README.md  eslint.config.mjs  functions.js  functions.json  manifest.xml  openferric-test.xlsx  package-lock.json  package.json  serve.js  taskpane.html  taskpane.js  tsconfig.json
excel-addin/src/: functions.ts  serve.ts  taskpane.ts
lsp/: Cargo.toml
lsp/src/: backend.rs  completion.rs  diagnostics.rs  document_symbols.rs  main.rs  notification.rs  semantic_tokens.rs  symbols.rs
openferric-lsp/: Cargo.toml
openferric-lsp/src/: backend.rs  codelens.rs  completion.rs  diagnostics.rs  document_symbols.rs  goto_def.rs  hover.rs  main.rs  notification.rs  semantic_tokens.rs  symbols.rs
openferric-mcp/: Cargo.toml
openferric-mcp/src/: main.rs
openferric-mcp/src/tools/: calibration.rs  dsl.rs  market_data.rs  math.rs  models.rs  pricing.rs  risk.rs
openferric-python/: Cargo.toml  README.md
openferric-python/src/: calibration.rs  core.rs  credit.rs  engines.rs  fft.rs  funding.rs  helpers.rs  instruments.rs  lib.rs  market.rs  math_bindings.rs  mc.rs  models.rs  pricing.rs  rates.rs  risk.rs  vol.rs
openferric-python/tests/: conftest.py  test_credit.py  test_fft.py  test_funding.py  test_rates.py  test_risk.py
openferric-wasm/: Cargo.toml
openferric-wasm/src/: calibrate.rs  credit.rs  dsl.rs  funding.rs  helpers.rs  heston.rs  lib.rs  payoff.rs  pricing.rs  risk.rs  vol.rs
python/: Cargo.toml  README.md  pyproject.toml
python/src/: calibration.rs  core.rs  credit.rs  engines.rs  fft.rs  funding.rs  helpers.rs  instruments.rs  lib.rs  market.rs  math_bindings.rs  mc.rs  models.rs  pricing.rs  risk.rs  vol.rs
python/tests/: conftest.py  test_credit.py  test_fft.py  test_funding.py  test_pricing.py  test_rates.py  test_risk.py  test_vol.py
src/: lib.rs
src/bindings/: mod.rs
src/calibration/: core.rs  diagnostics.rs  heston.rs  hull_white.rs  instruments.rs  mod.rs  optimizers.rs  sabr.rs  svi.rs
src/core/: engine.rs  mod.rs  serialization.rs  types.rs
src/credit/: bootstrap.rs  cdo.rs  cds.rs  cds_index.rs  cds_option.rs  copula.rs  isda.rs  mod.rs  survival_curve.rs
src/dsl/: analysis.rs  ast.rs  compiler.rs  engine.rs  error.rs  eval.rs  ir.rs  jit.rs  lexer.rs  market.rs  mod.rs  parser.rs
src/engines/: mod.rs
src/greeks/: bsm.rs  mod.rs
src/instruments/: asian.rs  autocallable.rs  barrier.rs  basket.rs  bermudan.rs  black76.rs  cliquet.rs  commodity.rs  convertible.rs  digital.rs  double_barrier.rs  employee_stock_option.rs  exotic.rs  funding_rate_swap.rs  fx.rs  mbs.rs  mod.rs  power.rs  rainbow.rs  range_accrual.rs  real_option.rs  spread.rs  structured_notes.rs  swing.rs  tarf.rs  vanilla.rs  variance_swap.rs  weather.rs
src/market/: dividends.rs  fx.rs  market.rs  mod.rs
src/math/: aad.rs  approx_tier.rs  arena.rs  correlation.rs  fast_norm.rs  fast_rng.rs  functions.rs  gamma.rs  interpolation.rs  mod.rs  simd_avx512.rs  simd_math.rs  simd_neon.rs  sobol.rs  timeseries.rs
src/mc/: mod.rs  simulation.rs
src/models/: cgmy.rs  commodity.rs  hjm.rs  hw_calibration.rs  lmm.rs  mod.rs  nig.rs  rough_bergomi.rs  short_rate.rs  slv.rs  stochastic.rs  variance_gamma.rs
src/pricing/: american.rs  asian.rs  autocallable.rs  basket.rs  (+11 more)
tests/: american_approx_reference.rs  asian_quantlib.rs  barrier_quantlib.rs  bermudan_quantlib.rs  commodity_reference.rs  commodity_weather_test.rs  credit_isda_quantlib.rs  credit_quantlib_cds_test.rs  digital_reference.rs  dividend_modelling_issue58.rs  dsl_examples.rs  european_quantlib.rs  exotic_reference.rs  fang_oosterlee_heston.rs  fft_levy_reference.rs  fft_test.rs  gatheral_svi_reference.rs  haug_rainbow_spread.rs  heston_quantlib.rs  hjm_adjustments_test.rs  lsm_reference.rs  parallel_test.rs  pde_solvers_issue35.rs  quantlib_reference.rs  quantlib_validation_test.rs  rates_bond_quantlib.rs  rates_day_count_quantlib.rs  rates_derivatives_test.rs  rates_fra_quantlib.rs  rates_ois_quantlib.rs  rates_swap_test.rs  rates_swaption_quantlib.rs  rates_test.rs  rates_xccy_inflation_ois_test.rs  rates_yield_curve_quantlib.rs  serialization_roundtrip.rs  serialization_roundtrip_test.rs  simd_test.rs  strata_barrier.rs  strata_black_scholes.rs  (+5 more)
vscode-ext/: .gitignore  language-configuration.json  package-lock.json  package.json  tsconfig.json
www/: AGENTS.md  CLAUDE.md  index.html  playground.html  worker.js
(+129 files in other folders)
