[workspace]
members = [".", "openferric-wasm", "openferric-python"]

[package]
name = "openferric"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
default = []
parallel = ["dep:rayon"]
simd = []
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster", "dep:wasm-bindgen-futures"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
rand = "0.10"
rand_distr = "0.6"
nalgebra = "0.34"
rayon = { version = "1.11", optional = true }
num-complex = "0.4"
rustfft = "6"
realfft = "3"
wgpu = { version = "24", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
approx = "0.5"
criterion = "0.8"
statrs = "0.18"

[[bench]]
name = "pricing_bench"
harness = false

[[bench]]
name = "parallel_bench"
harness = false
required-features = ["parallel"]

[[bench]]
name = "simd_bench"
harness = false

[[bench]]
name = "fft_bench"
harness = false

[[bench]]
name = "mc_bench"
harness = false

[[bench]]
name = "interpolation_bench"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
overflow-checks = false

[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3
overflow-checks = false
