[workspace]
members = [
    ".",
    "openferric-wasm",
    "openferric-python",
    "openferric-lsp",
    "openferric-mcp",
]

[workspace.lints.rust]
unused_must_use = "deny"

[workspace.lints.clippy]
todo = "deny"
unimplemented = "deny"
too_many_arguments = "allow"
type_complexity = "allow"

[package]
name = "openferric"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
description = "Quantitative finance library for derivative pricing, risk analytics, and structured products"
license = "MIT"
authors = ["Ross Saunders <rosssaunders@outlook.com>"]
homepage = "https://github.com/rosssaunders/openferric"
documentation = "https://docs.rs/openferric"
repository = "https://github.com/rosssaunders/openferric"
readme = "README.md"
keywords = ["finance", "derivatives", "pricing", "options", "quantitative"]
categories = ["finance", "mathematics", "science"]
exclude = [
    "vendor/",
    "excel-addin/",
    "vscode-ext/",
    "openferric-wasm/",
    "openferric-python/",
    "openferric-lsp/",
    "www/",
    ".github/",
    "docs/",
    "tests/",
    "benches/",
    "examples/",
    "Makefile",
    "CLAUDE.md",
    ".copilot-instructions.md",
    ".codecov.yml",
]

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
parallel = ["dep:rayon"]
simd = []
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster", "dep:wasm-bindgen-futures"]
jit = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-module", "dep:cranelift-jit"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
rand = "0.10"
rand_distr = "0.6"
nalgebra = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winnow = "0.7"
rmp-serde = "1"
rayon = { version = "1.11", optional = true }
num-complex = "0.4"
rustfft = "6"
realfft = "3"
statrs = "0.18"
wgpu = { version = "28", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4", optional = true }
getrandom = { version = "0.4", features = ["wasm_js"] }
getrandom_0_2 = { package = "getrandom", version = "0.2", features = ["js"] }

[dev-dependencies]
approx = "0.5"
criterion = "0.8"
ureq = { version = "3", features = ["json"] }

[[bench]]
name = "pricing_bench"
harness = false

[[bench]]
name = "parallel_bench"
harness = false
required-features = ["parallel"]

[[bench]]
name = "simd_bench"
harness = false

[[bench]]
name = "fft_bench"
harness = false

[[bench]]
name = "mc_bench"
harness = false

[[bench]]
name = "dsl_bench"
harness = false

[[bench]]
name = "interpolation_bench"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
overflow-checks = false

[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3
overflow-checks = false
