[package]
name = "openferric-lsp"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[[bin]]
name = "openferric-lsp"
path = "src/main.rs"

[dependencies]
openferric = { path = ".." }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
