[package]
name = "openferric-mcp"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "openferric-mcp"
path = "src/main.rs"

[dependencies]
openferric = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ureq = { version = "3", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
