[package]
name = "openferric-python"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[lib]
name = "openferric"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
openferric_core = { path = "..", package = "openferric" }
pyo3 = { version = "0.28", features = ["extension-module"] }
